# SPA-application-Comments

./: TASK.md  env.example
back/: manage.py  pyproject.toml
back/api/: urls.py
back/api/v1/: urls.py
back/api/v1/serializers/: comments.py
back/api/v1/views/: captcha.py  comments.py
back/comments/: admin.py  consumers.py  validators.py  views.py
back/comments/models/: __init__.py  attachment.py  comments.py
back/comments/services/: __init__.py  attachments.py  broadcast.py  captcha.py
back/config/: asgi.py  settings.py  settings_selector.py  urls.py  wsgi.py
back/config/settings/: __init__.py  base.py  dev.py  prod.py
back/core/models/: __init__.py  base.py
front/: package-lock.json
front/src/: App.vue  style.css
front/src/components/: CommentItem.css  CommentItem.vue  CommentList.css  CommentList.vue
